--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "formik": "^2.1.3",
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "redux-form": "^8.3.0",
